crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__env__doctor_fix_yes_unregistered_after.snap
---
source: crates/engram-cli/tests/cli/snapshot/env.rs
expression: "f.run(&[\"list\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] list
exit: 0
--- stdout ---
[
  {
    "created_at": "[TIMESTAMP]",
    "criticality": 0.5,
    "epistemic": "fact",
    "id": "[UUID]",
    "physical": [
      "/"
    ],
    "status": "Active",
    "summary": "Personal note",
    "type": "context",
    "updated_at": "[TIMESTAMP]",
    "visibility": "Personal"
  }
]
--- stderr ---
