crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__env__review_challenged_only_none.snap
---
source: crates/engram-cli/tests/cli/snapshot/env.rs
expression: "f.run(&[\"review\", \"--challenged-only\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] review --challenged-only
exit: 0
--- stdout ---
{
  "message": "No memories need review."
}
--- stderr ---
