crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__env__review_stale_only.snap
---
source: crates/engram-cli/tests/cli/snapshot/env.rs
expression: "f.run(&[\"review\", \"--stale-only\", \"--stale-after-days\", \"3650\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] review --stale-only --stale-after-days 3650
exit: 0
--- stdout ---
{
  "message": "No memories need review."
}
--- stderr ---
