crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__env__setup_dry_run_no_plugin.snap
---
source: crates/engram-cli/tests/cli/snapshot/env.rs
expression: "f.run(&[\"setup\", \"--dry-run\", \"--no-plugin\", \"--claude-dir\",\nclaude.to_str().unwrap()])"
---
$ engramdb --no-maintenance --dir [PROJECT] setup --dry-run --no-plugin --claude-dir [PROJECT]/claude-home
exit: 0
--- stdout ---
{"message":"Would add hooks to settings.json."}
{"message":"Would register the engramdb MCP server in [PROJECT]/claude-home/.mcp.json."}
{"message":"Would add MCP tool permissions to settings.json."}
{"message":"Would create ENGRAM.md."}
{"message":"Would create CLAUDE.md with @ENGRAM.md reference."}
--- stderr ---
